attempted to isolate navbar + separated custom from bootstrap

--- a/static/less/old/custom-other - Copy.less
+++ b/static/less/old/custom-other - Copy.less
@@ -1,4 +1,4 @@
-// Hopefully most settings that need to change will be here
+﻿// Hopefully any settings that need to change will be here
 
 /* 
 
@@ -142,7 +142,6 @@
             min-width: 250px;
             margin: auto;
             margin-bottom: -5%;
-
           }
 
           img.clouds, img.logo-big {
@@ -200,11 +199,178 @@
           // color: @link-hover-color;
           text-decoration: none;
         }
+
+        &:focus {
+          .tab-focus();
+        }
       }
     // ----------- /end Links -----------
   // ------------- /end Typography ---------------
 
+// =============== Navbar custom settings ==================================
+// other navbar settings can be found in custom-variables.less line 270
 
+  // background mixins
+    .nav-inner-shadow (@x: 0, @y: 0, @blur: 20px, @spread: 0, @alpha: 0.3) {
+      -webkit-box-shadow: inset @x @y @blur @spread rgba(255, 255, 255, @alpha);
+      -moz-box-shadow:    inset @x @y @blur @spread rgba(255, 255, 255, @alpha);
+      box-shadow:         inset @x @y @blur @spread rgba(255, 255, 255, @alpha);
+    }
+    .nav-inner-shadow-hover (@x: 0, @y: 0, @blur: 20px, @spread: 0, @nav-inner-shadow-color: fade(lighten(@nav-color, 50%), 30%)) {
+      -webkit-box-shadow: inset @x @y @blur @spread @nav-inner-shadow-color;
+      -moz-box-shadow:    inset @x @y @blur @spread @nav-inner-shadow-color;
+      box-shadow:         inset @x @y @blur @spread @nav-inner-shadow-color;
+    }
+    .nav-inner-shadow-active (@x: 0, @y: 0, @blur: 20px, @spread: 0, @nav-inner-shadow-color: fade(darken(@nav-color, 50%), 15%)) {
+      -webkit-box-shadow: inset @x @y @blur @spread @nav-inner-shadow-color;
+      -moz-box-shadow:    inset @x @y @blur @spread @nav-inner-shadow-color;
+      box-shadow:         inset @x @y @blur @spread @nav-inner-shadow-color;
+    }
+    .nav-radial(@inner-color: lighten(@nav-color, 5%); @outer-color: fade(shade(@nav-color, 5%), 60%)) {
+      background-image: -webkit-gradient(radial, center center, 0, center center, 460, from(@inner-color), to(@outer-color));
+      background-image: -webkit-radial-gradient(circle, @inner-color, @outer-color);
+      background-image: -moz-radial-gradient(circle, @inner-color, @outer-color);
+      background-image: radial-gradient(circle, @inner-color, @outer-color);
+      background-repeat: no-repeat;
+    }
+    .nav-bg-gradient  (@start-color: lighten(@nav-color, 15%); 
+                      @mid-color1: @nav-color; @color-stop1: 55%; 
+                      @mid-color2: shade(@nav-color, 20%); @color-stop2: 57%; 
+                      @end-color: shade(@nav-color, 10%)) {
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@start-color), color-stop(@color-stop1, @mid-color1), color-stop(@color-stop2, @mid-color2), to(@end-color));
+      background-image: -webkit-linear-gradient(@start-color, @mid-color1 @color-stop1, @mid-color2 @color-stop2, @end-color);
+      background-image: -moz-linear-gradient(top, @start-color, @mid-color1 @color-stop1, @mid-color2 @color-stop2, @end-color);
+      background-image: linear-gradient(@start-color, @mid-color1 @color-stop1, @mid-color2 @color-stop2, @end-color);
+      background-repeat: no-repeat;
+      filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@start-color),argb(@end-color))); // IE9 and down, gets no color-stop at all for proper fallback
+    }
+
+  // navbar variables are in @custom-variables.less @line 90
+  .dropdown-menu {
+    font-family:      @navbar-font-family;
+    font-style:       @navbar-font-style;
+    font-weight:      @navbar-font-weight;
+    font-size:        @navbar-font-size;
+    text-transform:   @navbar-text-transform;
+  }
+
+  .navbar-default {
+    font-family:      @navbar-font-family;
+    font-style:       @navbar-font-style;
+    font-weight:      @navbar-font-weight;
+    font-size:        @navbar-font-size;
+    text-transform:   @navbar-text-transform;
+
+    // colapsed menu glyph button
+    .navbar-toggle {
+      color: @navbar-default-link-color;
+      margin: auto;
+      width: 100%;
+      height: 30px;
+      border: none;
+
+      &:hover, 
+      &:focus {
+        // background-color:  darken(@navbar-default-link-hover-bg, 5%);
+        color: @navbar-default-link-hover-color;
+      }
+      &:active {
+        color: @navbar-default-link-active-color;
+      }
+    }
+
+    // apply mixin from above for navbar background
+    @media (min-width: @screen-sm-min) {
+      .nav-bg-gradient;
+      .nav-inner-shadow;
+    }
+
+    .navbar-nav {
+      > li > a {
+
+        // add padding between links @custom-variable.less @line-96
+          /* Small devices (tablets, 768px and up) */
+          @media (min-width: @screen-sm-min) {
+          padding-left:   @navbar-manual-spacing - .7;
+          padding-right:  @navbar-manual-spacing - .7;
+          }
+          
+          /* Medium devices (desktops, 992px and up) */
+          @media (min-width: @screen-md-min) { 
+          padding-left:   @navbar-manual-spacing; //100%
+          padding-right:  @navbar-manual-spacing; //100%
+          }
+
+          /* Large devices (large desktops, 1200px and up) */
+          @media (min-width: @screen-lg-min) { 
+          padding-left:   @navbar-manual-spacing + .5;
+          padding-right:  @navbar-manual-spacing + .5;
+          }
+
+        &:hover,
+        &:focus {
+          // background
+          // background-color: orange;
+
+          // custom lighting effect on hover
+          @media (min-width: @screen-sm-min) {
+            .nav-radial;
+            .nav-inner-shadow-hover;
+          }
+
+        }
+        &:active {
+          // custom lighting effect on active
+          .nav-inner-shadow-active;
+        }
+      }
+      > .active > a {
+
+
+        &,
+        &:hover,
+        &:focus {
+
+          // custom lighting effect on focus
+          @media (min-width: @screen-sm-min) {
+            .nav-radial;
+          }
+          background: darken(@navbar-default-link-hover-bg, 5%);
+
+        }
+      }
+    }
+  }
+
+  .navbar{
+    min-height:@navbar-height; 
+    margin: 0px;
+  }
+  .navbar-nav > li > a {
+    padding-top:@nav-padding !important; 
+    padding-bottom:@nav-padding !important;
+  }
+
+  // for disabled links (ie: disabled menu item or any other link)
+  .disabled {
+    text-decoration: line-through;
+  }
+// -------------- /end Navbar custom settings ----------------------
+
+// ================= breadcrumb ===================== 
+  .breadcrumb {
+    font-size: .7em;
+    a {
+      text-decoration: none;
+    }
+    .showBanner {
+      color: orange;
+      .button-size(2px; 2px; 1em; 1em; 3px);
+      background-color: @gray-lighter;
+      border: 1px dotted fade(orange, 50%); 
+    }
+  }
+// -------------- /end breadcrumb ----------------- 
 
 // ================= banner ===================== 
   // variables and mixins for banner
@@ -399,7 +565,7 @@
     .agenda-label {
       border-top-left-radius: 7px;
       border-top-right-radius: 7px;
-      // #gradient.five-color-gradient();
+      #gradient.five-color-gradient();
     }
   // styles
   #agenda {
@@ -444,49 +610,49 @@
           margin-top: 10px;
         }
 
-        // date {
-        //   .make-sm-column(2);
-        //   position: relative;
-        //   z-index: 10;
-        //   top: -13px;
-        //   left: -7px;
-        //   float: left;
-        //   text-align: center;
-        //   width: 65px;
-        //   margin: 0 2px -10px 0;
-        //   padding: 19px 0 12px;
-        //   line-height: 1.35em;
-        //   border-radius: 10px 0 3px 3px;
-        //   background: lighten(#E7D9C3, 0%);
-        //   box-shadow: 6px 5px 10px -7px rgba(0, 0, 0, 0.85),
-        //               inset 0 0 20px fade(@cuivre, 50%),
-        //               1px 1px 0 0 fade(@cuivre, 50%);
-        //   .text-shadow();
+        date {
+          .make-sm-column(2);
+          position: relative;
+          z-index: 10;
+          top: -13px;
+          left: -7px;
+          float: left;
+          text-align: center;
+          width: 65px;
+          margin: 0 2px -10px 0;
+          padding: 19px 0 12px;
+          line-height: 1.35em;
+          border-radius: 10px 0 3px 3px;
+          background: lighten(#E7D9C3, 0%);
+          box-shadow: 6px 5px 10px -7px rgba(0, 0, 0, 0.85),
+                      inset 0 0 20px fade(@cuivre, 50%),
+                      1px 1px 0 0 fade(@cuivre, 50%);
+          .text-shadow();
           
-        //   font-family: @font-family-display;
-        //   font-style: italic;
-        //   font-weight: 700;
-        //   font-size: 1.2em;
-        //   color: tint(@cuivre, 20%);
-        //   span.year {
-        //     display: inline-block;
-        //     font-size: .75em;
-        //     letter-spacing: .4em;
-        //   }
-        //   &:after {
-        //     content: "";
-        //     position: absolute;
-        //     display: block;
-        //     width: 0;
-        //     height: 0;
-        //     border-left: 10px solid fade(@cuivre, 50%);
-        //     border-top: 10px solid transparent;
-        //     border-bottom: none;
-        //     top: 0;
-        //     right: -10px;
+          font-family: @font-family-display;
+          font-style: italic;
+          font-weight: 700;
+          font-size: 1.2em;
+          color: tint(@cuivre, 20%);
+          span.year {
+            display: inline-block;
+            font-size: .75em;
+            letter-spacing: .4em;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 0;
+            height: 0;
+            border-left: 10px solid fade(@cuivre, 50%);
+            border-top: 10px solid transparent;
+            border-bottom: none;
+            top: 0;
+            right: -10px;
           
-        //   }
-        // }
+          }
+        }
         h3 {
           .make-sm-column(10);
           font-size: 1.25em;
